--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
-/* App.css */
-
 /* Overall app styles */
 .app {
   font-family: Arial, sans-serif;
-  background-color: #f8f8f8;
+  background-color: #121212;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  
+  color: white;
 }
 
-/* Content styles */
 .content {
   flex-grow: 1;
   padding: 1rem;
