--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,8 @@
 .content {
   flex-grow: 1;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
